updates to  front end styling, update to backend models

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* CSS Custom Properties */
-:root {
+/* :root {
   --white: #FFFFFF;
   --tan-1: #FBF9F6;
   --tan-2: #E7E2DD;
@@ -8,7 +8,7 @@
   --orange: #F67F00;
   --text-light: #968c84;
   --text-dark: #615954;
-}
+} */
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -35,37 +35,37 @@ code {
   height: 100%;
 }
 
-.align-ctr {
+/* .align-ctr {
   text-align: center;
-}
+} */
 
-.align-rt {
+/* .align-rt {
   text-align: right;
-}
+} */
 
-.smaller {
+/* .smaller {
   font-size: smaller;
-}
+} */
 
-.flex-ctr-ctr {
+/* .flex-ctr-ctr {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
-.flex-col {
+/* .flex-col {
   flex-direction: column;
-}
+} */
 
-.flex-j-end {
+/* .flex-j-end {
   justify-content: flex-end;
-}
+} */
 
-.scroll-y {
+/* .scroll-y {
   overflow-y: scroll;
-}
+} */
 
-.section-heading {
+/* .section-heading {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -76,48 +76,50 @@ code {
   padding: .6vmin;
   text-align: center;
   font-size: 2vmin;
-}
+} */
 
-.form-container {
+/* .form-container {
   padding: 3vmin;
   background-color: var(--tan-1);
   border: .1vmin solid var(--tan-3);
   border-radius: 1vmin;
-}
+} */
 
-p.error-message {
+/* p.error-message {
   color: var(--orange);
   text-align: center;
-}
+} */
 
-form {
+/* form {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 1.25vmin;
   color: var(--text-light);
-}
+} */
 
-label {
+/* label {
   font-size: 2vmin;
   display: flex;
   align-items: center;
-}
+} */
 
-input {
+/* input {
   padding: 1vmin;
   font-size: 2vmin;
   border: .1vmin solid var(--tan-3);
   border-radius: .5vmin;
   color: var(--text-dark);
-  background-image: none !important; /* prevent lastpass */
+  background-image: none !important; 
   outline: none;
-}
+} */
 
-input:focus {
+/* note from background-image: prevent lastpass */
+
+/* input:focus {
   border-color: var(--orange);
-}
+} */
 
-button, a.button {
+/* button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
@@ -130,9 +132,9 @@ button, a.button {
   border-radius: .5vmin;
   outline: none;
   cursor: pointer;
-}
+} */
 
-button.btn-sm {
+/* button.btn-sm {
   font-size: 1.5vmin;
   padding: .6vmin .8vmin;
 }
@@ -150,4 +152,4 @@ button:disabled, form:invalid button[type="submit"] {
 button[type="submit"] {
   grid-column: span 2;
   margin: 1vmin 0 0;
-}
+} */
